--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -734,6 +734,7 @@ body {
 
   .action-section {
     margin-top: 1.5rem;
+    margin-bottom: 2rem;
   }
 
   .primary-btn {
@@ -1194,3 +1195,4 @@ body {
     font-size: 1.5rem;
   }
 }
+
